syntax = "proto3";

package storage;

import "google/protobuf/empty.proto";

option go_package = "kamal.storage.v1;storage1";

message Err {
  string message = 1;
}

message Item {
  int32 id = 1;
  string name = 2;
  int32 quantity = 3;
  Price price = 4;
}

message Price {
  int32 currency = 1;
  float price = 2;
}

service Items {
  rpc CreateItem(CreateItemRequest) returns (google.protobuf.Empty);
  rpc GetItemById(GetItemByIdRequest) returns (GetItemByIdResponse);
  rpc DeleteItemById(DeleteItemByIdRequest) returns (google.protobuf.Empty);
}

message CreateItemRequest {
  Item item = 1;
}

message GetItemByIdRequest {
  string id = 1;
}

message GetItemByIdResponse {
  Item item = 1;
}

message DeleteItemByIdRequest {
  string id = 1;
}

service Storage {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
}

message Response {
  string status = 1;
  Err err = 2;
}

message CreateOrderRequest {
  repeated Item items = 1;
  string username = 2;
}

message CreateOrderResponse {
  Response response = 1;
}

message CancelOrderRequest {
  string id = 1;
  string username = 2;
}

message CancelOrderResponse {
  Response response = 1;
}



